1998-11-20  Harri Porten  <porten@kde.org>

	* First draft of a client&server archicture consisting of setuid
	child process that will serve requests for file manipulation from
	the parent. The parent is doing all the GUI operations is running
	with normal user privileges. Assuming the approx. 300 lines still
	running setuid root will be intensively reviewed this should
	result in a kppp far less vulnerable to security exploits.
	* added requester.* and opener.*
	* TODO: - handle signals (SIGCHLD, SIGPIPE?)
	        - replace usage Qt in pap.cpp with standard library calls
		- get ppp_available() running (presumably broken now)
		- speed up reading the syslog (reading single chars now)
		- Test, debug, test ....

1998-11-17  Mario Weilguni <mweilguni@kde.org>

	* Security fix: fixed possible buffer overflow in findFileInPath()
	* Security fixes: re-checked all char[] on stack to be suid-safe
	  If it is considere to be safe, a comment was added to the end of
	  line

1998-11-17  Mario Weilguni <mweilguni@kde.org>	

	* removed another "extern" by making Accounting::getCosts(...) static

1998-11-17  Mario Weilguni <mweilguni@kde.org>

	* further improvements in ppp-log wizard
	* runtests.cpp: test for Qt >= 1.40 before include header files

1998-11-11  Harri Porten  <porten@kde.org>

	* connect.cpp: allow a little delay after sending the volume
	string. Prevents it from getting eaten by the next command.
	Thanks to Craig Goodrich <craig@airnet.net> for providing the patch.

1998-11-11  Harri Porten  <porten@kde.org>

	* runtests.cpp: added header file to solve compilation problems

1998-11-04  Harri Porten  <porten@kde.org>

	* got rid of two global variables

1998-11-04  Mario Weilguni <mweilguni@kde.org>

	* kppp now checks itself if the kernel supports PPP (Linux only
	for now. If anyone wants this for another system - implement it!)
	* before dialing out, the check for PPP support is repeated, if
	the kernel module was unloaded between running the tests and the