@@ -1,3 +1,3 @@
 #ifndef KPPPVERSION
-#define KPPPVERSION "1.5.0 (Release 128)"
+#define KPPPVERSION "1.5.1 (Release 129)"
 #endif
